[gd_scene load_steps=8 format=1]

[ext_resource path="res://theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://widgets/control_widget/config_gui/touchpad_config_gui.gd" type="Script" id=2]
[ext_resource path="res://widgets/control_widget/config_gui/stick_config_gui.gd" type="Script" id=3]
[ext_resource path="res://widgets/control_widget/config_gui/dpad_config_gui.gd" type="Script" id=4]
[ext_resource path="res://widgets/graphics/slider_grabber.png" type="Texture" id=5]
[ext_resource path="res://widgets/graphics/slider.tres" type="StyleBox" id=6]
[ext_resource path="res://widgets/control_widget/config_gui/button_config_gui.gd" type="Script" id=7]

[node name="touchpad_config_gui" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0
script/script = ExtResource( 2 )

[node name="mode_buttons" type="HButtonArray" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0
custom_constants/button_separator = 0
flat = false
button/count = 3
button/min_button_size = -1.0
button/align = 4
button/0/text = "Stick"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "DPad"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Button"
button/2/tooltip = ""
button/2/icon = null
button/selected = 0

[node name="tabs" type="TabContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
tab_align = 1
tabs_visible = false

[node name="stick_config_gui" type="Control" parent="tabs"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 1.0
margin/bottom = 1.0
script/script = ExtResource( 3 )

[node name="radius" type="Control" parent="tabs/stick_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 179.0
margin/bottom = 79.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 51.0
margin/bottom = 23.0
text = "Radius"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/stick_config_gui/radius"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 159.0
margin/bottom = 70.0
range/min = 10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/stick_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 30.0
margin/right = 199.0
margin/bottom = 70.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="threshold" type="Control" parent="tabs/stick_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 179.0
margin/bottom = 149.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 57.0
margin/bottom = 23.0
text = "Threshold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/stick_config_gui/threshold"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 159.0
margin/bottom = 70.0
range/min = 0.0
range/max = 90.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/stick_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 30.0
margin/right = 199.0
margin/bottom = 70.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="x" type="Control" parent="tabs/stick_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 140.0
margin/right = 99.0
margin/bottom = 359.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/x"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 72.0
margin/bottom = 23.0
text = "X Axis"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="axis_buttons" type="VButtonArray" parent="tabs/stick_config_gui/x"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 29.0
margin/right = 69.0
margin/bottom = 209.0
custom_constants/button_separator = 0
flat = false
button/count = 6
button/min_button_size = -1.0
button/align = 4
button/0/text = "X"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Y"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Z"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "X Rot"
button/3/tooltip = ""
button/3/icon = null
button/4/text = "Y Rot"
button/4/tooltip = ""
button/4/icon = null
button/5/text = "Z Rot"
button/5/tooltip = ""
button/5/icon = null
button/selected = 0

[node name="y" type="Control" parent="tabs/stick_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = 140.0
margin/right = 179.0
margin/bottom = 359.0

[node name="header_label" type="Label" parent="tabs/stick_config_gui/y"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 72.0
margin/bottom = 23.0
text = "Y Axis"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="axis_buttons" type="VButtonArray" parent="tabs/stick_config_gui/y"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 29.0
margin/right = 69.0
margin/bottom = 209.0
custom_constants/button_separator = 0
flat = false
button/count = 6
button/min_button_size = -1.0
button/align = 4
button/0/text = "X"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Y"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Z"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "X Rot"
button/3/tooltip = ""
button/3/icon = null
button/4/text = "Y Rot"
button/4/tooltip = ""
button/4/icon = null
button/5/text = "Z Rot"
button/5/tooltip = ""
button/5/icon = null
button/selected = 0

[node name="dpad_config_gui" type="Control" parent="tabs"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0
script/script = ExtResource( 4 )

[node name="radius" type="Control" parent="tabs/dpad_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 179.0
margin/bottom = 79.0

[node name="header_label" type="Label" parent="tabs/dpad_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 51.0
margin/bottom = 23.0
text = "Radius"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/dpad_config_gui/radius"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 159.0
margin/bottom = 70.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 6 )
range/min = 10.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/dpad_config_gui/radius"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 30.0
margin/right = 199.0
margin/bottom = 70.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="threshold" type="Control" parent="tabs/dpad_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 179.0
margin/bottom = 149.0

[node name="header_label" type="Label" parent="tabs/dpad_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 51.0
margin/bottom = 23.0
text = "Threshold"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/dpad_config_gui/threshold"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 159.0
margin/bottom = 70.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 6 )
range/min = 0.0
range/max = 90.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/dpad_config_gui/threshold"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 30.0
margin/right = 199.0
margin/bottom = 70.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_config_gui" type="Control" parent="tabs"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0
script/script = ExtResource( 7 )

[node name="button_num" type="Control" parent="tabs/button_config_gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 179.0
margin/bottom = 79.0

[node name="header_label" type="Label" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 9.0
margin/right = 51.0
margin/bottom = 23.0
text = "Button #"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slider" type="HSlider" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 30.0
margin/right = 159.0
margin/bottom = 70.0
custom_icons/grabber_hilite = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = ExtResource( 6 )
range/min = 1.0
range/max = 128.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="value_label" type="Label" parent="tabs/button_config_gui/button_num"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 169.0
margin/top = 30.0
margin/right = 199.0
margin/bottom = 70.0
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


